@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add recurring payments to Payflow [Rick Olson]
+#
 # * Improve the error message generated by requires! [cody]
 #
 # * Update credit card regular expressions and update Quickpay gateway with tests for new cards [cody]
